--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ dependencies:
   # Service locator
   get_it: ^3.1.0
   # UI
-  convex_bottom_bar: ^2.1.1
+  bubble_bottom_bar: ^1.2.0
   simple_animations: ^1.3.3
   url_launcher: ^5.4.2
+  material_design_icons_flutter: ^4.0.5245
   cupertino_icons: ^0.1.2
   # Value equality
   equatable: ^1.0.1
